# mangum

./: .coveragerc  .gitignore  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
adapter/: index.html
asgi-frameworks/: index.html
contributing/: index.html
docs/: CNAME  adapter.md  asgi-frameworks.md  asgi.md  aws-how-to.md  azure-how-to.md  cli.md  contributing.md  external-links.md  frameworks.md  http.md  index.md  installation.md  introduction.md  lifespan.md  release-notes.md  usage.md  websockets.md
example/: app.py
external-links/: index.html
http/: index.html
lifespan/: index.html
mangum/: __init__.py  __main__.py  __version__.py  adapter.py  asgi.py  cli.py  config.py  connections.py  exceptions.py  handlers.py  lifespan.py  middleware.py  protocols.py  response.py  scope.py  types.py  utils.py  websocket.py  websockets.py
mangum/adapters/: aws.py  azure.py
mangum/asgi/: adapter.py  middleware.py  protocol.py
mangum/backends/: __init__.py  base.py  dynamodb.py  postgres.py  postgresql.py  redis.py  s3.py  sqlite.py  sqlite3.py
mangum/cli/: __init__.py  aws_cli.py  commands.py  config.py  helpers.py
mangum/handlers/: __init__.py  abstract_handler.py  alb.py  api_gateway.py  asgi.py  aws.py  aws_alb.py  aws_api_gateway.py  aws_cf_lambda_at_edge.py  aws_http_gateway.py  aws_ws_gateway.py  azure.py  lambda_at_edge.py  utils.py
mangum/protocols/: __init__.py  asgi.py  http.py  lifespan.py  websocket.py  websockets.py  ws.py
scripts/: README.md  check  docs  lint  publish  setup  test
search/: search_index.json
tests/: conftest.py  mock_server.py  test_adapter.py  test_asgi.py  test_aws.py  test_aws_adapter.py  test_aws_config.py  test_aws_middleware.py  test_azure.py  test_azure_adapter.py  test_azure_middleware.py  test_backends.py  test_cli.py  test_http.py  test_lifespan.py  test_types.py  test_websocket.py  test_websockets.py
tests/deployment/: .gitignore  README.md  alb.tf  api-gateway.oas30.json  api-gateway.tf  backend.tf  cf-lambda-at-edge.tf  config.tf  http-gateway.oas30.json  http-gateway.tf  lambda.tf  lambda_function.py  output.tf  vpc.tf
tests/handlers/: test_abstract_handler.py  test_alb.py  test_api_gateway.py  test_aws_alb.py  test_aws_api_gateway.py  test_aws_cf_lambda_at_edge.py  test_aws_http_gateway.py  test_aws_ws_gateway.py  test_custom.py  test_http_gateway.py  test_lambda_at_edge.py
tests/integration/: docker-compose.yml  mock_server.py  test_backends.py
